--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Swaroj</string>
+    <string name="app_name">Imminear</string>
     <string name="submit_details">Submit Details</string>
     <string name="migrant">MIGRANT</string>
     <string name="local">LOCAL</string>
@@ -11,26 +11,26 @@
     <string name="register">REGISTER</string>
     <string name="register_migrant">Register as MIGRANT</string>
     <string name="register_local">Register as LOCAL</string>
-    <string name="prephoneno">+91 xxxxx-xxxxx</string>
+    <string name="prephoneno">xxxxx-xxxxx</string>
     <string name="get_otp">Get OTP</string>
     <string name="enter_otp">Enter OTP</string>
     <string name="enter_last_location">Enter last location</string>
     <string name="title_activity_dashboard_map">Map</string>
-    <string name="swaroj_2020_all_rights_reserved">©Swaroj 2020. All rights reserved.</string>
+    <string name="swaroj_2020_all_rights_reserved"></string>
     <string name="something_s_not_right_restart_app">Something\'s not right. Restart app.</string>
-    <string name="click_near_me_to_refresh">Click <b><i>NEAR ME</i></b> to refresh.</string>
+    <string name="click_near_me_to_refresh">Click <b><i><font color='#01C6DB'>NEAR ME</font></i></b> to refresh.</string>
     <string name="refresh">refresh</string>
     <string name="a_social_distancing_platform">A social distancing platform</string>
-    <string name="no_migrants">No migrant people currently nearby.\n Click <b><i>NEAR ME</i></b> to refresh.</string>
-    <string name="some_migrants">Some migrant people currently nearby.\n Click <b><i>NEAR ME</i></b> to refresh.</string>
-    <string name="many_migrants">Many migrant people currently nearby.\n Click <b><i>NEAR ME</i></b> to refresh.</string>
+    <string name="no_migrants">No migrant people currently nearby.\n Click <b><i><font color='#01C6DB'>NEAR ME</font></i></b> to refresh.</string>
+    <string name="some_migrants">Some migrant people currently nearby.\n Click <b><i><font color='#01C6DB'>NEAR ME</font></i></b> to refresh.</string>
+    <string name="many_migrants">Many migrant people currently nearby.\n Click <b><i><font color='#01C6DB'>NEAR ME</font></i></b> to refresh.</string>
     <string name="pp1">
-        SWAROJ takes the responsibility of having your personal information very seriously. It uses
+        Imminear takes the responsibility of having your personal information very seriously. It uses
 your personal information only for only improving the Service. It keeps your personal
 information as its own and keeps it confidential. By using the Service, you consent to the
 collection and use of information in accordance with this Policy. \n
 
-SWAROJ reserves the right, at its sole discretion, to modify or replace this Policy by posting
+Imminear reserves the right, at its sole discretion, to modify or replace this Policy by posting
 the updated version on the Site. It is your responsibility to check this Policy periodically for
 changes. Your continued use of the Service following the posting of any changes to this
 Policy constitutes your acceptance of those changes.\n
@@ -58,4 +58,5 @@ Identifying you when you book our service;
 Enable us to provide you with the services;
 Send you information we think you may find useful or which you have requested from us
     </string>
+    <string name="rangeof">\at a range of less than 500 metres</string>
 </resources>
